# qtpsd

./: .clang-tidy  .gitattributes  .gitmodules  CMakeLists.txt  README.md  qt_cmdline.cmake
.github/workflows/: ci.yml
docs/: similarity_report.md
examples/: CMakeLists.txt
examples/psdcore/app/: CMakeLists.txt  itemexportsettingdialog.cpp  itemexportsettingdialog.h  main.cpp  mainwindow.cpp  psdabstractitem.cpp  psdabstractitem.h  psdfolderitem.cpp  psdfolderitem.h  psdimageitem.cpp  psdimageitem.h  psdshapeitem.cpp  psdshapeitem.h  psdtextitem.cpp  psdtextitem.h  psdtreeitemmodel.cpp  psdtreeitemmodel.h  psdview.cpp  psdview.h  psdwidget.cpp  psdwidget.ui
examples/psdcore/psdinfo/: CMakeLists.txt  main.cpp
examples/psdwidget/qtcreator-psd-plugin/: CMakeLists.txt  PsdPlugin.json.in  README.md  psdplugin.cpp  psdpluginconstants.h  psdplugintr.h
examples/psdwidget/qtcreator-psd-plugin/.github/scripts/: plugin.json
src/: CMakeLists.txt
src/apps/psdexporter/: CMakeLists.txt  exportdialog.cpp  exportdialog.h  exportdialog.ui  itemexportsettingdialog.cpp  itemexportsettingdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  psdabstractitem.cpp  psdabstractitem.h  psdfolderitem.cpp  psdfolderitem.h  psdimageitem.cpp  psdimageitem.h  psdshapeitem.cpp  psdshapeitem.h  psdtextitem.cpp  psdtextitem.h  psdtreeitemmodel.cpp  psdtreeitemmodel.h  psdview.cpp  psdview.h  psdwidget.cpp  psdwidget.h  psdwidget.ui
src/plugins/psdadditionallayerinformation/: CMakeLists.txt
src/plugins/psdadditionallayerinformation/anno/: CMakeLists.txt  anno.cpp  anno.json
src/plugins/psdadditionallayerinformation/blnc/: CMakeLists.txt  blnc.cpp  blnc.json
src/plugins/psdadditionallayerinformation/brit/: CMakeLists.txt  brit.cpp  brit.json
src/plugins/psdadditionallayerinformation/brst/: CMakeLists.txt  brst.cpp  brst.json
src/plugins/psdadditionallayerinformation/clrl/: CMakeLists.txt  clrl.cpp  clrl.json
src/plugins/psdadditionallayerinformation/curv/: CMakeLists.txt  curv.cpp  curv.json
src/plugins/psdadditionallayerinformation/data/: CMakeLists.txt  data.cpp  data.json
src/plugins/psdadditionallayerinformation/expa/: CMakeLists.txt  expa.cpp  expa.json
src/plugins/psdadditionallayerinformation/feid/: CMakeLists.txt  feid.cpp  feid.json
src/plugins/psdadditionallayerinformation/fmsk/: CMakeLists.txt  fmsk.cpp  fmsk.json
src/plugins/psdadditionallayerinformation/grdm/: CMakeLists.txt  grdm.cpp  grdm.json
src/plugins/psdadditionallayerinformation/hue2/: CMakeLists.txt  hue2.cpp  hue2.json
src/plugins/psdadditionallayerinformation/lclr/: CMakeLists.txt  lclr.cpp  lclr.json
src/plugins/psdadditionallayerinformation/levl/: CMakeLists.txt  levl.cpp  levl.json
src/plugins/psdadditionallayerinformation/lfx2/: CMakeLists.txt  lfx2.cpp  lfx2.json
src/plugins/psdadditionallayerinformation/lmsk/: CMakeLists.txt  lmsk.cpp  lmsk.json
src/plugins/psdadditionallayerinformation/lnk_/: CMakeLists.txt  lnk_.cpp  lnk_.json
src/plugins/psdadditionallayerinformation/lr16/: CMakeLists.txt  lr16.cpp  lr16.json
src/plugins/psdadditionallayerinformation/lrfx/: CMakeLists.txt  lrfx.cpp  lrfx.json
src/plugins/psdadditionallayerinformation/lsct/: CMakeLists.txt  lsct.cpp  lsct.json
src/plugins/psdadditionallayerinformation/lsdk/: CMakeLists.txt  lsdk.cpp  lsdk.json
src/plugins/psdadditionallayerinformation/luni/: CMakeLists.txt  luni.cpp  luni.json
src/plugins/psdadditionallayerinformation/mixr/: CMakeLists.txt  mixr.cpp  mixr.json
src/plugins/psdadditionallayerinformation/none/: CMakeLists.txt  none.cpp  none.json
src/plugins/psdadditionallayerinformation/patt/: CMakeLists.txt  patt.cpp  patt.json
src/plugins/psdadditionallayerinformation/phfl/: CMakeLists.txt  phfl.cpp  phfl.json
src/plugins/psdadditionallayerinformation/plld/: CMakeLists.txt  plld.cpp  plld.json
src/plugins/psdadditionallayerinformation/qpointf/: CMakeLists.txt  qpointf.cpp  qpointf.json
src/plugins/psdadditionallayerinformation/selc/: CMakeLists.txt  selc.cpp  selc.json
src/plugins/psdadditionallayerinformation/shmd/: CMakeLists.txt  shmd.cpp  shmd.json
src/plugins/psdadditionallayerinformation/sold/: CMakeLists.txt  sold.cpp  sold.json
src/plugins/psdadditionallayerinformation/tmpl/: CMakeLists.txt  tmpl.cpp  tmpl.json
src/plugins/psdadditionallayerinformation/tysh/: CMakeLists.txt  tysh.cpp  tysh.json
src/plugins/psdadditionallayerinformation/u16/: CMakeLists.txt  u16.cpp  u16.json
src/plugins/psdadditionallayerinformation/u32/: CMakeLists.txt  u32.cpp  u32.json
src/plugins/psdadditionallayerinformation/u8/: CMakeLists.txt  u8.cpp  u8.json
src/plugins/psdadditionallayerinformation/unknown/: CMakeLists.txt  unknown.cpp  unknown.json
src/plugins/psdadditionallayerinformation/v16descriptor/: CMakeLists.txt  v16descriptor.cpp  v16descriptor.json
src/plugins/psdadditionallayerinformation/vmsk/: CMakeLists.txt  vmsk.cpp  vmsk.json
src/plugins/psdadditionallayerinformation/vogk/: CMakeLists.txt  vogk.cpp  vogk.json
src/plugins/psdadditionallayerinformation/vscg/: CMakeLists.txt  vscg.cpp  vscg.json
src/plugins/psdadditionallayerinformation/vstk/: CMakeLists.txt  vstk.cpp  vstk.json
src/plugins/psddescriptor/: CMakeLists.txt
src/plugins/psddescriptor/_comp/: CMakeLists.txt  lyid.cpp  lyid.json
src/plugins/psddescriptor/bool/: CMakeLists.txt  bool.cpp  bool.json
src/plugins/psddescriptor/doub/: CMakeLists.txt  doub.cpp  doub.json
src/plugins/psddescriptor/enum/: CMakeLists.txt  enum.cpp  enum.json
src/plugins/psddescriptor/long/: CMakeLists.txt  long.cpp
src/plugins/psddescriptor/obar/: CMakeLists.txt  obar.cpp  obar.json
src/plugins/psddescriptor/objc/: CMakeLists.txt  objc.cpp  objc.json
src/plugins/psddescriptor/pth/: CMakeLists.txt  pth.cpp  pth.json
src/plugins/psddescriptor/tdta/: CMakeLists.txt  tdta.cpp  tdta.json
src/plugins/psddescriptor/text/: CMakeLists.txt  text.cpp  text.json
src/plugins/psddescriptor/untf/: CMakeLists.txt  untf.cpp  untf.json
src/plugins/psddescriptor/vlls/: CMakeLists.txt  vlls.cpp  vlls.json
tests/: CMakeLists.txt
(+288 files in other folders)
