# Copyright (C) 2024 Signal Slot Inc.
# SPDX-License-Identifier: LGPL-3.0-only OR GPL-2.0-only OR GPL-3.0-only

add_subdirectory(anno)
add_subdirectory(blnc)
add_subdirectory(brit)
add_subdirectory(clrl)
add_subdirectory(curv)
add_subdirectory(data)
add_subdirectory(expa)
add_subdirectory(fmsk)
add_subdirectory(grdm)
add_subdirectory(hue2)
add_subdirectory(lclr)
add_subdirectory(levl)
add_subdirectory(lfx2)
add_subdirectory(lnk_)
add_subdirectory(luni)
add_subdirectory(lsct)
add_subdirectory(lsdk)
add_subdirectory(lrfx)
add_subdirectory(mixr)
add_subdirectory(none)
add_subdirectory(patt)
add_subdirectory(phfl)
add_subdirectory(plld)
add_subdirectory(qpointf)
add_subdirectory(selc)
add_subdirectory(shmd)
add_subdirectory(sold)
add_subdirectory(tysh)
add_subdirectory(u16)
add_subdirectory(u32)
add_subdirectory(u8)
add_subdirectory(unknown)
add_subdirectory(v16descriptor)
add_subdirectory(vmsk)
add_subdirectory(vogk)
add_subdirectory(vscg)
add_subdirectory(vstk)
