# Copyright (C) 2024 Signal Slot Inc.
# SPDX-License-Identifier: LGPL-3.0-only OR GPL-2.0-only OR GPL-3.0-only

add_subdirectory(bool)
add_subdirectory(doub)
add_subdirectory(enum)
add_subdirectory(long)
add_subdirectory(obar)
add_subdirectory(objc)
add_subdirectory(tdta)
add_subdirectory(text)
add_subdirectory(untf)
add_subdirectory(vlls)
